--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           cache: "maven"
 
       - name: Build with maven
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn -f ./FreTreServer/pom.xml --batch-mode --update-snapshots verify
 
       - name: Move artifacts for upload
         if: ${{ success() }} && github.ref == 'main'
