--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,10 @@ jobs:
     if: ${{ success() }} && github.ref == 'main'
     needs: [build]
     uses: ./.github/workflows/cd_STG.yml
+    secrets:
+      AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      EC2_SECURITY_GROUP_ID: ${{ secrets.EC2_SECURITY_GROUP_ID }}
+      GIT_PRIVATE_KEY: ${{ secrets.GIT_PRIVATE_KEY }}
+      USER_NAME: ${{ secrets.USER_NAME }}
+      HOST_NAME: ${{ secrets.HOST_NAME }}
