fix cd workflow7

--- a/.github/workflows/cd_STG.yml
+++ b/.github/workflows/cd_STG.yml
@@ -11,9 +11,9 @@ on:
         required: true
       GIT_PRIVATE_KEY:
         required: true
-      EC2_USER_NAME:
+      USER_NAME:
         required: true
-      EC2_HOST_NAME:
+      HOST_NAME:
         required: true
   workflow_dispatch:
 
