fix app dockerfile to copy target war path

--- a/FreTreApiCore/conte/fretre/Dockerfile
+++ b/FreTreApiCore/conte/fretre/Dockerfile
@@ -4,4 +4,4 @@ FROM payara/server-full:6.2022.1-jdk17
 ENV DEPLOY_PROPS='--name FreTreServer'
 
 # WARファイルをコンテナ内のdeploymentsディレクトリにコピー
-COPY FreTreApiCore.war $DEPLOY_DIR
+COPY ./fretre/FreTreApiCore.war $DEPLOY_DIR
