--- a/HttpClientCore/pom.xml
+++ b/HttpClientCore/pom.xml
@@ -21,5 +21,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.stotic.dev.com</groupId>
+            <artifactId>CommonCore</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
