--- a/FreTreApiCore/pom.xml
+++ b/FreTreApiCore/pom.xml
@@ -27,12 +27,25 @@
     </repositories>
 
     <dependencies>
+
+        <!-- private modules -->
         <dependency>
             <groupId>org.stotic.dev.com</groupId>
             <artifactId>CommonCore</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/../CommonCore/target/CommonCore-1.0-SNAPSHOT.jar</systemPath>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.stotic.dev.com</groupId>
+            <artifactId>PushNotificationCore</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.stotic.dev.com</groupId>
+            <artifactId>HttpClientCore</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- CDI -->
@@ -47,16 +60,6 @@
             <groupId>org.glassfish.jersey.ext.cdi</groupId>
             <artifactId>jersey-cdi1x</artifactId>
             <version>${jersey2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.ext.cdi</groupId>
-            <artifactId>jersey-weld2-se</artifactId>
-            <version>${jersey2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.weld.servlet</groupId>
-            <artifactId>weld-servlet-core</artifactId>
-            <version>4.0.2.Final</version>
         </dependency>
 
         <!-- JAR-RX -->
@@ -90,11 +93,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-            <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.14.2</version>
-        </dependency>
 
         <!-- Jersey -->
         <dependency>
@@ -110,6 +108,11 @@
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
+            <version>${jersey2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
             <version>${jersey2.version}</version>
         </dependency>
 
@@ -139,18 +142,6 @@
             <artifactId>jersey-bean-validation</artifactId>
             <version>${jersey2.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.stotic.dev.com</groupId>
-            <artifactId>PushNotificationCore</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.stotic.dev.com</groupId>
-            <artifactId>HttpClientCore</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
 
     </dependencies>
 
@@ -166,18 +157,6 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>11.0.15</version>
-                <configuration>
-                <systemProperties>
-                    <systemProperty>
-                        <name>APP_TEAM_ID</name>
-                        <value>${teamId}</value>
-                    </systemProperty>
-                    <systemProperty>
-                        <name>APNS_KEY_ID</name>
-                        <value>${apnsKeyId}</value>
-                    </systemProperty>
-                </systemProperties>
-            </configuration>
             </plugin>
         </plugins>
     </build>
