--- a/.github/workflows/cd_STG.yml
+++ b/.github/workflows/cd_STG.yml
@@ -35,33 +35,65 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # AWS CLIをインストールする
-      - name: AWS CLI install
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install --update
-          aws --version
+      # # GCPの認証
+      # - name: Auth GCP
+      #   uses: "google-github-actions/auth@v0"
+      #   with:
+      #     credentials_json: ${{ secrets.GCP_SERVICE_KEY }}
 
-      # AWS CLIにキーを設定をする
-      - name: AWS set Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      # # gcloud sdk 設定
+      # - name: "Set up Cloud SDK"
+      #   uses: "google-github-actions/setup-gcloud@v0"
+
+      # gcloud sdk 設定
+      - name: Setup Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.3.0
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-2
+          project_id: fretre
+          service_account_key: ${{ secrets.GCP_SERVICE_KEY }}
+          export_default_credentials: true
 
-      # デプロイする
-      - name: Deploy
+      - name: "Deploy with gcloud"
         run: |
+          gcloud compute ssh taichis844@fretre-notification-instance \
+          --zone us-west1-a \
+          --quiet \
+          --command='
+            cd app/FreTreBackEnd && 
+            git fetch
+            git checkout ${{ github.ref_name }}
+            git pull
+            bash FreTreAp
+            iCore/conte/scripts/deploy_payara_server.sh
+          '
 
-          # SSHのセキュリティグループを開放する
-          aws ec2 authorize-security-group-ingress --group-id ${{ secrets.EC2_SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+      # # AWS CLIをインストールする
+      # - name: AWS CLI install
+      #   run: |
+      #     curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      #     unzip awscliv2.zip
+      #     sudo ./aws/install --update
+      #     aws --version
 
-          # SSH接続して、git pullする
-          echo "${{ secrets.GIT_PRIVATE_KEY }}" > private_key
-          chmod 600 private_key
-          ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key "cd /home/ec2-user/app/FreTreBackEnd && git fetch --prune && git checkout main && git pull origin main && ./FreTreApiCore/conte/scripts/deploy.sh -e stg"
+      # # AWS CLIにキーを設定をする
+      # - name: AWS set Credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: ap-southeast-2
 
-          # SSHのセキュリティグループを閉じる
-          aws ec2 revoke-security-group-ingress --group-id ${{ secrets.EC2_SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+      # # デプロイする
+      # - name: Deploy
+      #   run: |
+
+      #     # SSHのセキュリティグループを開放する
+      #     aws ec2 authorize-security-group-ingress --group-id ${{ secrets.EC2_SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+
+      #     # SSH接続して、git pullする
+      #     echo "${{ secrets.GIT_PRIVATE_KEY }}" > private_key
+      #     chmod 600 private_key
+      #     ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key "cd /home/ec2-user/app/FreTreBackEnd && git fetch --prune && git checkout main && git pull origin main && ./FreTreApiCore/conte/scripts/deploy.sh -e stg"
+
+      #     # SSHのセキュリティグループを閉じる
+      #     aws ec2 revoke-security-group-ingress --group-id ${{ secrets.EC2_SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
