--- a/.github/workflows/cd_STG.yml
+++ b/.github/workflows/cd_STG.yml
@@ -35,23 +35,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # # GCPの認証
-      # - name: Auth GCP
-      #   uses: "google-github-actions/auth@v0"
-      #   with:
-      #     credentials_json: ${{ secrets.GCP_SERVICE_KEY }}
-
-      # # gcloud sdk 設定
-      # - name: "Set up Cloud SDK"
-      #   uses: "google-github-actions/setup-gcloud@v0"
+      # GCPの認証
+      - name: Auth GCP
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_KEY }}
 
       # gcloud sdk 設定
       - name: Setup Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.3.0
-        with:
-          project_id: fretre
-          service_account_key: ${{ secrets.GCP_SERVICE_KEY }}
-          export_default_credentials: true
+        uses: "google-github-actions/setup-gcloud@v2"
 
       - name: "Deploy with gcloud"
         run: |
