deployコマンドのタイポ修正

--- a/.github/workflows/cd_STG.yml
+++ b/.github/workflows/cd_STG.yml
@@ -56,8 +56,7 @@ jobs:
             git fetch
             git checkout ${{ github.ref_name }}
             git pull
-            bash FreTreAp
-            iCore/conte/scripts/deploy_payara_server.sh
+            bash FreTreApiCore/conte/scripts/deploy_payara_server.sh
           '
 
       # # AWS CLIをインストールする
